--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -94,6 +94,11 @@ Kanalımız ile alakalı tüm duyurular sosyal medya hesaplarımız üzerinden p
 
 
     <div class="box-container">
+<a href="https://www.youtube.com/watch?v=tcaTm75rHmM">YENİ DÖNEME BAŞLIYORUZ... ARTIK HER HAFTA YENİ VİDEOLAR!!!</a> ‏‏‏‏‏‏‏‏ ‏‏‏‏<img src="video1.jpg" alt="1"> 
+ 
+
+
+<div class="box-container">
 <a href="https://www.youtube.com/watch?v=TvHMDoM7FDM">HOŞGELDİN YA RAMAZAN-I ŞERİF | BATTLE TEAMS TÜRKİYE</a> ‏‏‏‏‏‏‏‏ ‏‏‏‏<img src="video1.jpg" alt="1"> 
  
 </section>
@@ -123,13 +128,14 @@ Kanalımız ile alakalı tüm duyurular sosyal medya hesaplarımız üzerinden p
 
     <form action="">
 
-        <input type="text" placeholder="isim" class="box">
+
+
+<form action="https://formspree.io/agonybt@gmail.com" method="POST">
+<input type="text" placeholder="isim" class="box">
         <input type="email" placeholder="email" class="box">
         <input type="text" placeholder="Konu" class="box">
         <textarea name="" id="" cols="30" rows="10" class="box message" placeholder="mesaj"></textarea>
         <button type="submit" class="btn"> Gönder <i class="fas fa-paper-plane"></i> </button>
-
-    </form>
 
 </div>
 
