--- a/index.html
+++ b/index.html
@@ -94,9 +94,11 @@ Kanalımız ile alakalı tüm duyurular sosyal medya hesaplarımız üzerinden p
 
 
     <div class="box-container">
-<a href="https://www.youtube.com/watch?v=tcaTm75rHmM">YENİ DÖNEME BAŞLIYORUZ... ARTIK HER HAFTA YENİ VİDEOLAR!!!</a> ‏‏‏‏‏‏‏‏ ‏‏‏‏<img src="video1.jpg" alt="1"> 
+<a href="https://www.youtube.com/watch?v=tcaTm75rHmM">YENİ DÖNEME BAŞLIYORUZ... ARTIK HER HAFTA YENİ VİDEOLAR!!!</a> ‏‏‏‏‏‏‏‏ ‏‏‏‏<img src="video2.jpg" alt="1"> 
  
 
+<div class="box-container">
+<a href="https://www.youtube.com/watch?v=fhZJhboIWmg">THELOST DEVRİ KAPANDI! AGONY HESAP TANITIM VİDEOSU YAKINDA</a> ‏‏‏‏‏‏‏‏ ‏‏‏‏<img src="video3.jpg" alt="1"> 
 
 <div class="box-container">
 <a href="https://www.youtube.com/watch?v=TvHMDoM7FDM">HOŞGELDİN YA RAMAZAN-I ŞERİF | BATTLE TEAMS TÜRKİYE</a> ‏‏‏‏‏‏‏‏ ‏‏‏‏<img src="video1.jpg" alt="1"> 
