--- a/index.html
+++ b/index.html
@@ -101,6 +101,9 @@ Kanalımız ile alakalı tüm duyurular sosyal medya hesaplarımız üzerinden p
 <a href="https://www.youtube.com/watch?v=fhZJhboIWmg">THELOST DEVRİ KAPANDI! AGONY HESAP TANITIM VİDEOSU YAKINDA</a> ‏‏‏‏‏‏‏‏ ‏‏‏‏<img src="video3.jpg" alt="1"> 
 
 <div class="box-container">
+<a href="https://www.youtube.com/watch?v=9785vc-M0EA&t=28s">LAZER SİLAHI TANITIM VİDEOSU | ROYEL PASS SİLAHI | BATTLE TEAMS TR</a> ‏‏‏‏‏‏‏‏ ‏‏‏‏<img src="video4.jpg" alt="1"> 
+
+<div class="box-container">
 <a href="https://www.youtube.com/watch?v=TvHMDoM7FDM">HOŞGELDİN YA RAMAZAN-I ŞERİF | BATTLE TEAMS TÜRKİYE</a> ‏‏‏‏‏‏‏‏ ‏‏‏‏<img src="video1.jpg" alt="1"> 
  
 </section>
