--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
  <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Youtube : Agony | Resmi Website</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+    <meta name="description"
+        content="Merhaba, Tanınan Adımla Ben Agony, Ama Gerçekte Ismim Ahmet. Bu Kanalı Açma Sebebim Hem Battle Teams Hem De Pubg Mobile Videosu Çekmekti ...." />
+    <meta name="keywords" content="Agony,Ahmet,AgonyBTTR" />
+    <meta name="author" content="Agony" />
 
     <!-- font awesome cdn link  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
@@ -46,7 +51,10 @@
 
     <h3></h3>
     <h1> <!-- İSTEDİĞİNİZİ YAZABİLİRSİNİZ -->  <span class="hacker" id="hacker">AGONY</span></h1>
-    <p>youtube.com/@AgonyBTTR
+    <a href="https://youtube.com/@AgonyBTTR"><button class="btn">Youtube Kanalıma Ulaşmak İçin Tıkla <i class="fas fa-"></i></button></a>
+  </p>
+      
+      </button>
     </p>
     <a href="#about"><button class="btn">Hakkımda <i class="fas fa-user"></i></button></a>
 
@@ -94,17 +102,18 @@ Kanalımız ile alakalı tüm duyurular sosyal medya hesaplarımız üzerinden p
 
 
     <div class="box-container">
-<a href="https://www.youtube.com/watch?v=tcaTm75rHmM">YENİ DÖNEME BAŞLIYORUZ... ARTIK HER HAFTA YENİ VİDEOLAR!!!</a> ‏‏‏‏‏‏‏‏ ‏‏‏‏<img src="video2.jpg" alt="1"> 
+    <a href="https://www.youtube.com/watch?v=tcaTm75rHmM"><button class="btn">YENİ DÖNEME BAŞLIYORUZ... ARTIK HER HAFTA YENİ VİDEOLAR!!!<i class="fas fa-"></i></button></a> ‏‏‏‏‏‏‏‏ ‏‏‏‏<img src="video2.jpg" alt="1"> 
  
 
 <div class="box-container">
-<a href="https://www.youtube.com/watch?v=fhZJhboIWmg">THELOST DEVRİ KAPANDI! AGONY HESAP TANITIM VİDEOSU YAKINDA</a> ‏‏‏‏‏‏‏‏ ‏‏‏‏<img src="video3.jpg" alt="1"> 
+    <a href="https://www.youtube.com/watch?v=fhZJhboIWmg&t=2s"><button class="btn">THELOST DEVRİ KAPANDI! AGONY HESAP TANITIM VİDEOSU YAKINDA<i class="fas fa-"></i></button></a> ‏‏‏‏‏‏‏‏ ‏‏‏‏<img src="video3.jpg" alt="1"> 
 
 <div class="box-container">
-<a href="https://www.youtube.com/watch?v=9785vc-M0EA&t=28s">LAZER SİLAHI TANITIM VİDEOSU | ROYEL PASS SİLAHI | BATTLE TEAMS TR</a> ‏‏‏‏‏‏‏‏ ‏‏‏‏<img src="video4.jpg" alt="1"> 
+    <a href="https://www.youtube.com/watch?v=9785vc-M0EA&t=34s"><button class="btn">LAZER SİLAHI TANITIM VİDEOSU | ROYEL PASS SİLAHI | BATTLE TEAMS TR<i class="fas fa-"></i></button></a>‏‏‏‏‏‏‏‏ ‏‏‏‏<img src="video4.jpg" alt="1"> 
 
 <div class="box-container">
-<a href="https://www.youtube.com/watch?v=TvHMDoM7FDM">HOŞGELDİN YA RAMAZAN-I ŞERİF | BATTLE TEAMS TÜRKİYE</a> ‏‏‏‏‏‏‏‏ ‏‏‏‏<img src="video1.jpg" alt="1"> 
+    <a href="https://www.youtube.com/watch?v=TvHMDoM7FDM&t=4s"><button class="btn">HOŞGELDİN YA RAMAZAN-I ŞERİF | BATTLE TEAMS TÜRKİYE
+<i class="fas fa-"></i></button></a>‏‏‏‏‏‏‏‏ ‏‏‏‏<img src="video1.jpg" alt="1"> 
  
 </section>
 
@@ -208,7 +217,14 @@ document.onmousedown=IE;document.onmouseup=NS;document.oncontextmenu=new Functio
 </script>
   <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   
-  
+<iframe src="a.mp3" allow="autoplay" loop  style="display:none">
+</iframe> 
+<audio  loop autoplay>
+
+  <source src="müzik1.mp3"  type="audio/mpeg">
+
+</audio>
+
 
 
 </body>
