--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             <li><a href="#about">Hakkımda</a></li>
     
             <li><a href="#portfolio">Videolar</a></li>
+            <li><a href="#ekip">Ekip</a></li>
             <li><a href="#contact">İletişim</a></li>
         </ul>
     </nav>
@@ -120,7 +121,36 @@ Kanalımız ile alakalı tüm duyurular sosyal medya hesaplarımız üzerinden p
 
 <!-- portfolio section ends -->
 
+<!-- ekip section starts  -->
+
+<section class="ekip" id="ekip">
+
+<h1 class="heading"> <span>Ekip</span> </h1>
+
+<div class="box-container">
+
+
+    <div class="box-container">
+ <img src="profile.jpg" alt="1">    <a href="https://agony.glitch.me"><button class="btn">Agony (Ahmet) | Yönetici<i class="fas fa-"></i></button></a> 
+ 
+
+<div class="box">
+<img src="woxz.jpg" alt="1">     <a href="https://woxz.glitch.me"><button class="btn">Berkay (Woxz) Ş. | Social Media Manager<i class="fas fa-"></i></button></a>
+
+<div class="box">
+ <img src="kursat.jpg" alt="1">    <a href=""><button class="btn">Kürşat (Journeux) | Editör<i class="fas fa-"></i></button></a>
+
+<div class="box">
+ <img src="bayram.jpg" alt="1">    <a href=""><button class="btn">Bayram (Samax) | Account Admin
+<i class="fas fa-"></i></button></a>
+ 
+</section>
+
+<!-- ekip section end  -->
+
+
 <!-- contact section starts  -->
+
 
 <section class="contact" id="contact">
 
